--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ select {
     font-weight: 400;
     font-size: 16px;
     color: #303030;
-    background-image: url(./assets/img/Vector.svg);
+    background-image: url(./assets/img/Vector1.svg);
     background-repeat: no-repeat;
     appearance: none;
     background-position: right 0 top 50%;
@@ -79,7 +79,7 @@ select {
 }
 
 .frameworks-list {
-    list-style-image: url(./assets/images/solar_map-arrow-up-bold.svg);
+    list-style-image: url(./assets/img/Vector2.svg);
     padding-left: 20px;
     font-weight: 400;
     font-size: 16px;
@@ -89,7 +89,7 @@ select {
 
 .books-list {
     width: 476px;
-    padding-left: 20px;
+    padding-left: 0 20px;
     /* Стили для нумерованного списка во второй секции */
 }
 
@@ -120,18 +120,20 @@ select {
 .line {
     border: 1px solid rgba(48, 48, 48, 0.3);
     width: 1440px;
+    margin: 60px 0px;
     /* Стили для линии */
 }
 
 table {
     border-collapse: collapse;
+    font-size: 14px;
     /* Стили для таблицы */
 }
 
 th, td {
     border: 1px solid #95A1BB;
     width: 240px;
-    padding: 15px 0;
+    padding: 12px 15px;
     text-align: center;
     /* Стили для ячеек таблицы */
 }
@@ -139,7 +141,7 @@ th, td {
 footer {
     background: rgba(163, 167, 255, 0.3);
     text-align: left;
-    padding: 20px 0;
+    padding: 26px 0;
     /* Стили для футера */
 }
 
@@ -148,5 +150,6 @@ footer {
     font-weight: 400;
     font-size: 14px;
     color: #2965f1;
+    text-decoration-line: none;
     /* Стили для футера */
 }
