--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ select {
     font-size: 24px;
     color: #303030;
     margin-bottom: 25px;
+    padding: 0px 20px;
     /* Стили для заголовков во второй секции */
 }
 
@@ -89,7 +90,7 @@ select {
 
 .books-list {
     width: 476px;
-    padding-left: 0 20px;
+    padding: 0 20px;
     /* Стили для нумерованного списка во второй секции */
 }
 
